<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TabWidget>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btnInsert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClickInsert"
                            android:text="@string/insert">
                        </Button>
                        <Button
                            android:id="@+id/btnUpdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClickUpdate"
                            android:text="@string/update">
                        </Button>
                        <Button
                            android:id="@+id/btnDelete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClickDelete"
                            android:text="@string/delete">
                        </Button>
                        <Button
                            android:id="@+id/btnError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClickError"
                            android:text="@string/error">
                        </Button>


                    </LinearLayout>
                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ListView
                            android:id="@+id/lvContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </ListView>

                        <ListView
                            android:id="@+id/lvDrivers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">


                        </ListView>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvTab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_2"/>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>



</LinearLayout>
